test-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: webhook-test
  labels:
    app: webhook-test
    kubevirt.io/flavor: android
    kubevirt.io: virt-launcher
spec:
  containers:
  - name: default
    image: ubuntu:bionic
    command: ['/bin/sh', '-c', 'echo Hello Kubernetes!']
  - name: compute
    image: ubuntu:bionic
    command: ['/bin/sh', '-c', 'echo Hello Kubernetes!']
